static/css/site.css
body {
    font-family: "Open Sans", sans-serif;
}

#splashSection {
    /* The image used */
    background-image: url("../images/signup-back1.jpg");

    /* Set a specific height */
    height: 100%; 

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

#howItWorksSection {
    /* The image used */

    background-image: url("../images/signup-back2.jpg");


    /* Set a specific height */
    min-height: 100%;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: top;
    background-repeat: no-repeat;
    background-size: cover;

    color: #cccccc;
    /*
    color: white;
     */
    text-align: center;
}

#howItWorksSection .glyphicon, #howItWorksSection .lnr {
    font-size: 48px;
    padding: 15px;
    background-color: rgba(0,0,0,0.5);
    border-radius: 15px;
}

#mockupSection {
    text-align: center;
}

#signupSection {

}

.signup-form {
    max-width: 800px;
    font-size: 16px
}

.signup-form-inner {
    margin: 0 10vw;
    border: 1px solid gray;
    border-radius: 5px;
    padding: 20px;
    box-shadow: 5px 5px 2px lightgray;
}

.signup-text {

}

a:hover {
    text-decoration: none;
}

.signup-header-link:hover > a {
    color: #f27f68!important;
}

.signup-header-link a {
    color: white;
}

.signup-header-link h1 {
    text-align: left;
}

.signup-tweet {
    float: right;
}

.signup-header-link {
    color: white;
    font-family: "Open Sans";
    line-height: 48px;
    letter-spacing: -1px;
    font-weight: 700;
    font-style: normal;
    font-size: 32px;
    text-align: left;
    display: inline-block;
}

.howitworks-title {
    margin-top: 72px;
}

.signup-title {
    color: #222222;
    font-family: "Open Sans";
    line-height: 48px;
    letter-spacing: -1px;
    font-weight: 700;
    font-style: normal;
    font-size: 32px;
    padding: 48px 0 24px 0;
    text-align: center;
}

.horizontal-break-white {
    background-color: #000;
    height: 5px;
    width: 100px;
    margin: 20px auto 25px;
    display: block;
}

.horizontal-break {
    background-color: #222222;
    height: 5px;
    width: 100px;
    margin: 20px auto 25px;
    display: block;
}

.mockup-image-container {

}

.mockup-image {
    width: 90%;
    padding: 10px 0;
}

.signup-header {
    background-color: rgba(0,0,0,0.66);
    height: 66px;
}

#footer {
    background-color: #222222;
    color: #999999;
    padding: 10px;
}

.footer-wrap {
    padding: 15px;
    border-top: 1px solid #3c3c3c;
}

h1.logo-h1 {
    font-size: 22px;
}

h2#title-h2 {
    text-align: center;
    color: white;
    padding-top: 22.5vh;
    font-size: 3em;
}

.row-form {
    margin-top: 10px;
    margin-bottom: 10px;
}

.modal-footer {
    margin-top: 60px;
}

.bs-callout {
    padding: 20px;
    border: 1px solid #eee;
    border-left-width: 5px;
    border-radius: 3px;
}
.bs-callout h4 {
    margin-top: 0;
    margin-bottom: 5px;
}
.bs-callout p:last-child {
    margin-bottom: 0;
}
.bs-callout code {
    border-radius: 3px;
}
.bs-callout+.bs-callout {
    margin-top: -5px;
}
.bs-callout-default {
    border-left-color: #777;
}
.bs-callout-default h4 {
    color: #777;
}
.bs-callout-primary {
    border-left-color: #428bca;
}
.bs-callout-primary h4 {
    color: #428bca;
}
.bs-callout-success {
    border-left-color: #5cb85c;
}
.bs-callout-success h4 {
    color: #5cb85c;
}
.bs-callout-danger {
    border-left-color: #d9534f;
}
.bs-callout-danger h4 {
    color: #d9534f;
}
.bs-callout-warning {
    border-left-color: #f0ad4e;
}
.bs-callout-warning h4 {
    color: #f0ad4e;
}
.bs-callout-info {
    border-left-color: #5bc0de;
}
.bs-callout-info h4 {
    color: #5bc0de;
}

